--- a/src/index.html
+++ b/src/index.html
@@ -3,4 +3,17 @@ layout: default
 title: BrainsCloud | Home
 ---
 
-Hello!
+<div class="stories">
+    <div class="stories_item">
+        <img src="" alt="">
+    </div>
+    <div class="stories_item">
+        2
+    </div>
+    <div class="stories_item">
+        3
+    </div>
+    <div class="stories_item">
+        4
+    </div>
+</div>
